[F] Fixed some layout issue in smallcards view

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -119,6 +119,10 @@ body {
 .details .content {
 	width: 85%;
 	height: 500px;
+	line-height: 1.1em;
+	font-family: "Corbel","DejaVu Sans",arial,serif;
+	text-align: left;
+	font-size: 18px;
 }
 
 
@@ -648,6 +652,10 @@ img {
 	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
 	color: #5c9db4;
 	font-size: 22px;
+	padding-bottom: 10px;
+	margin-bottom: 5px;
+	border-bottom: 1px solid #5c9db4;
+	text-align: center;
 }
 .content * {
 	margin-top: 0;
